--- a/starweb/Gemfile
+++ b/starweb/Gemfile
@@ -28,7 +28,7 @@ gem 'jbuilder', '~> 2.5'
 # Use ActiveStorage variant
 # gem 'mini_magick', '~> 4.8'
 
-#gem 'jquery-rails'
+gem 'jquery-rails'
 
 #IMG
 gem 'paperclip'
