--- a/starweb/Gemfile
+++ b/starweb/Gemfile
@@ -1,7 +1,7 @@
 source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby '2.6.1'
+ruby '2.6.3'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.2.3'
@@ -41,6 +41,8 @@ gem 'autoprefixer-rails'
 #Users
 gem 'devise'
 
+#Avoid polling
+gem 'wdm', '~> 0.1.0' if Gem.win_platform?
 
 #Messages spanish
 gem 'rails-i18n', '~> 5.1' # For 5.0.x, 5.1.x and 5.2.x
