--- a/starweb/test/fixtures/quotations.yml
+++ b/starweb/test/fixtures/quotations.yml
@@ -1,13 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  currency_id: one
+  currencies: one
   purchase: MyString
   sale: MyString
-  date: 2019-04-07
 
 two:
-  currency_id: two
+  currencies: two
   purchase: MyString
   sale: MyString
-  date: 2019-04-07
