--- a/starweb/test/fixtures/users.yml
+++ b/starweb/test/fixtures/users.yml
@@ -3,9 +3,9 @@
 # This model initially had no columns defined. If you add columns to the
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+# bundle exec rake db:fixtures:load RAILS_ENV=development
+admin:
+  id: 1
+  email: admin@example.com
+  encrypted_password: <%= User.new.send(:password_digest, 'admin') %>
+  permission_level: 3
