Roles - Cuentas por invitación - Administración de usuarios

--- a/starweb/Gemfile
+++ b/starweb/Gemfile
@@ -28,6 +28,8 @@ gem 'jbuilder', '~> 2.5'
 # Use ActiveStorage variant
 # gem 'mini_magick', '~> 4.8'
 
+gem 'devise_invitable'
+
 gem 'jquery-rails'
 
 #IMG
