--- a/starweb/test/fixtures/users.yml
+++ b/starweb/test/fixtures/users.yml
@@ -9,3 +9,16 @@ admin:
   email: admin@example.com
   encrypted_password: <%= User.new.send(:password_digest, 'admin') %>
   permission_level: 3
+
+team:
+  id: 2
+  email: team@example.com
+  encrypted_password: <%= User.new.send(:password_digest, 'team') %>
+  permission_level: 2
+
+secretary:
+  id: 3
+  email: secretary@example.com
+  encrypted_password: <%= User.new.send(:password_digest, 'secretary') %>
+  permission_level: 1
+
