--- a/starweb/test/fixtures/has_products.yml
+++ b/starweb/test/fixtures/has_products.yml
@@ -1,2 +1,19 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
+one:
+  order: one
+  product: one
+  specs_f: MyString
+  specs_b: MyString
+  quantity: 1
+  color: MyString
+  design: MyString
+
+two:
+  order: two
+  product: two
+  specs_f: MyString
+  specs_b: MyString
+  quantity: 1
+  color: MyString
+  design: MyString
