--- a/starweb/Gemfile
+++ b/starweb/Gemfile
@@ -53,6 +53,9 @@ gem 'rails-i18n', '~> 5.1' # For 5.0.x, 5.1.x and 5.2.x
 gem 'will_paginate', '~> 3.1.1'
 gem 'will_paginate-bootstrap4'
 
+# Bullet N+1
+gem 'bullet', group: 'development'
+
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
