--- a/starweb/Gemfile
+++ b/starweb/Gemfile
@@ -50,8 +50,9 @@ gem 'wdm', '~> 0.1.0' if Gem.win_platform?
 gem 'rails-i18n', '~> 5.1' # For 5.0.x, 5.1.x and 5.2.x
 
 # For pagination
-gem 'will_paginate', '~> 3.1.1'
-gem 'will_paginate-bootstrap4'
+gem 'kaminari'
+# Theme for pagination
+gem 'bootstrap4-kaminari-views'
 
 # Bullet N+1
 gem 'bullet', group: 'development'
