--- a/starweb/Gemfile
+++ b/starweb/Gemfile
@@ -54,6 +54,8 @@ gem 'rails_best_practices'
 gem 'bullet', group: 'development'
 # For search
 gem 'ransack', github: 'activerecord-hackery/ransack'
+# For search in orders
+gem "select2-rails"
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
