--- a/starweb/Gemfile
+++ b/starweb/Gemfile
@@ -56,6 +56,8 @@ gem 'bullet', group: 'development'
 gem 'ransack', github: 'activerecord-hackery/ransack'
 # For generate random data
 gem 'faker', :git => 'https://github.com/stympy/faker.git', :branch => 'master'
+# Simple form
+gem 'simple_form'
 
 # For invoices
 gem 'invoicing'
