--- a/starweb/Gemfile
+++ b/starweb/Gemfile
@@ -30,8 +30,6 @@ gem 'jbuilder', '~> 2.5'
 
 # For registration by email
 gem 'devise_invitable'
-# jquery
-gem 'jquery-rails'
 # IMG
 gem 'paperclip'
 # Boostrap
@@ -60,6 +58,8 @@ gem 'ransack', github: 'activerecord-hackery/ransack'
 gem 'faker', :git => 'https://github.com/stympy/faker.git', :branch => 'master'
 # Simple form
 gem 'simple_form'
+
+gem 'country_select', '~> 4.0'
 
 # For invoices
 gem 'invoicing'
