--- a/starweb/config/reports_kit/reports/supplies_stock.yml
+++ b/starweb/config/reports_kit/reports/supplies_stock.yml
@@ -1,4 +1,4 @@
-data_method: MyDataMethods.orders_by_client
+data_method: MyDataMethods.supplies_by_stock
 chart:
   options:
     legend:
@@ -7,8 +7,8 @@ chart:
       xAxes:
         - scaleLabel:
             display: true
-            labelString: Pedidos
+            labelString: Insumo
       yAxes:
         - scaleLabel:
             display: true
-            labelString: Cliente
+            labelString: En stock
