Hide decimals in currency

--- a/starweb/Gemfile
+++ b/starweb/Gemfile
@@ -28,6 +28,8 @@ gem 'jbuilder', '~> 2.5'
 # Use ActiveStorage variant
 # gem 'mini_magick', '~> 4.8'
 
+gem "nokogiri", ">= 1.10.4"
+
 # For registration by email
 gem 'devise_invitable'
 # IMG
