--- a/starweb/Gemfile
+++ b/starweb/Gemfile
@@ -56,8 +56,6 @@ gem 'rails_best_practices'
 # gem 'bullet', group: 'development'
 # For search
 gem 'ransack', github: 'activerecord-hackery/ransack'
-# For generate random data
-gem 'faker', :git => 'https://github.com/stympy/faker.git', :branch => 'master'
 # Simple form
 gem 'simple_form'
 
@@ -89,6 +87,18 @@ gem 'bootsnap', '>= 1.1.0', require: false
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+
+  # For tests
+  # For creates data for example in tests
+  gem 'factory_bot_rails'
+  gem "rspec-rails", "~> 3.5"
+  gem 'capybara'
+  gem 'selenium-webdriver'
+  gem 'chromedriver-helper'
+  gem "database_cleaner"
+  # For generate random data
+  gem 'faker', :git => 'https://github.com/stympy/faker.git', :branch => 'master'
+  gem "shoulda-matchers", require: false
 end
 
 group :development do
@@ -103,11 +113,7 @@ group :development do
 end
 
 group :test do
-  # Adds support for Capybara system testing and selenium driver
-  gem 'capybara', '>= 2.15'
-  gem 'selenium-webdriver'
-  # Easy installation and use of chromedriver to run system tests with Chrome
-  gem 'chromedriver-helper'
+
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
