--- a/starweb/Gemfile
+++ b/starweb/Gemfile
@@ -93,8 +93,7 @@ group :development, :test do
   gem 'factory_bot_rails'
   gem "rspec-rails", "~> 3.5"
   gem 'capybara'
-  gem 'selenium-webdriver'
-  gem 'chromedriver-helper'
+  gem 'webdrivers', '~> 3.0'
   gem "database_cleaner"
   # For generate random data
   gem 'faker', :git => 'https://github.com/stympy/faker.git', :branch => 'master'
